--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
  <div class="col-md-2 bg-info mt-2 pr-3 pt-4">
   <ul class="nav flex-column ml-2 mb-5">
     <li class="nav-item">
-      <a class="nav-link active text-center text-white" href="#"><i class="fas fa-laptop-house mr-1"></i>Dashboard</a><hr class="bg-primary"></hr>
+      <a class="nav-link active text-center text-white" href="dasboard.html"><i class="fas fa-laptop-house mr-1"></i>Dashboard</a><hr class="bg-primary"></hr>
     </li>
     <li class="nav-item">
       <div class="icon text-center text-white">
@@ -109,7 +109,7 @@
           <i class="fas fa-chalkboard-teacher"></i>
         </div>
         <h5 class="card-title">Jumlah Guru</h5>
-        <a href=""><p class="card-text text-white">lihat detail<i class="fas fa-angle-double-right"></i></p></a>
+        <a href="detailguru.html"><p class="card-text text-white">lihat detail<i class="fas fa-angle-double-right"></i></p></a>
       </div>
     </div>
 
@@ -156,7 +156,7 @@
       </div>>
     </div>
 
-    <div class="card mt-3 ml-3" style="width: 30rem; height: 15rem;">
+    <div class="card mt-3 ml-5" style="width: 30rem; height: 15rem;">
       <div class="media mt-2 ml-2">
         <img src="img/artikel.jpg" class="mr-3" alt="...">
         <div class="media-body text-dark">
@@ -184,3 +184,4 @@
    <script src="text/javascript" src="admin.js"></script>
   </body>
 </html>
+
