--- a/detailguru.html
+++ b/detailguru.html
@@ -36,7 +36,7 @@
  <div class="col-md-2 bg-info mt-2 pr-3 pt-4">
   <ul class="nav flex-column ml-2 mb-5">
     <li class="nav-item">
-      <a class="nav-link active text-center text-white" href="dasboard.html"><i class="fas fa-laptop-house mr-1"></i>Dashboard</a><hr class="bg-primary"></hr>
+      <a class="nav-link active text-center text-white" href="index.html"><i class="fas fa-laptop-house mr-1"></i>Dashboard</a><hr class="bg-primary"></hr>
     </li>
     <li class="nav-item">
       <div class="icon text-center text-white">
