--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
   </style>
-    <title>electronic.ID</title>
+    <title>Admin Sekolah</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-primary fixed-top">
@@ -74,7 +74,6 @@
       </div>
       <a class="nav-link text-white text-center" href="#">Jumlah Guru</a><hr class="bg-light"></hr>
     </li>
-   
   </ul>
  </div>
  <div class="col-md-10 p-5 pt-2">
@@ -184,4 +183,5 @@
    <script src="text/javascript" src="admin.js"></script>
   </body>
 </html>
+
 
