--- a/detailguru.html
+++ b/detailguru.html
@@ -11,7 +11,7 @@
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
   </style>
-    <title>electronic.ID</title>
+    <title>Admin Sekolah</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-primary fixed-top">
@@ -76,16 +76,55 @@
     </li>
   </ul>
  </div>
- <div class="card-body mt-3">
-  <h5 class="card-title">Program Pengajaran guru</h5>
-  <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-  <div class="progress ">
-    <div class="progress-bar bg-info w-75" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"> Tahap Pengerjaan Telah Sampai 80%/100% kumpulkan lagi untuk mencapai level 2</div>
-  </div>
-  <a href="#" class="btn btn-primary mt-3">Detail Progres</a>
-</div>
-</div>
+ <div class="col-md-10 p-5 pt-2">
+  <h3><i class="fas fa-laptop-house mr-1"></i>Dashboard</h3>
 
+  <div class="card mt-3">
+   <div class="media mt-2 ml-2">
+     <img src="img/guru.jpg" class="mr-3" alt="...">
+     <div class="media-body">
+       <div class="button">
+       <h5 class="mt-0">progres Pengerjaan guru pendidik
+         <button type="button" class="btn btn-primary btn-sm">lanjutkan</button></h5>
+       </div>
+       Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+      
+     </div>
+   </div>
+   <div class="card-body">
+     <h5 class="card-title">Program Pengajaran</h5>
+     <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+     <div class="progress ">
+       <div class="progress-bar bg-info w-100" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"> Tahap Pengerjaan Telah Sampai 100%/100%</div>
+     </div>
+     <a href="#" class="btn btn-primary mt-3">Detail Progres</a>
+   </div>
+ </div>
+ 
+ <div class="judul mt-2">
+   <h3>Daftar Guru Mata Pelajaran</h3>
+   <div class="media">
+    <img src="img/matematika.jpg" class="mr-3" alt="...">
+    <div class="media-body">
+      <h5 class="mt-0">Kelas Matematika</h5>
+      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+    </div>
+  </div>
+  <div class="media">
+    <div class="media-body mt-2">
+      <h5 class="mt-0 mb-1">Kelas Sains</h5>
+      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+    </div>
+    <img src="img/sains.jpg" class="ml-3" alt="...">
+  </div>
+  <div class="media">
+    <img src="img/arsitektur.jpg" class="mr-3" alt="...">
+    <div class="media-body">
+      <h5 class="mt-0">Kelas Arsitektur</h5>
+      Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+    </div>
+  </div>
+ </div>
  
  
     <!-- Optional JavaScript -->
