--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="icon text-white text-center">
         <i class="fas fa-chalkboard-teacher"></i>
       </div>
-      <a class="nav-link text-white text-center" href="#">Jumlah Guru</a><hr class="bg-light"></hr>
+      <a class="nav-link text-white text-center" href="detailguru.html">Jumlah Guru</a><hr class="bg-light"></hr>
     </li>
   </ul>
  </div>
